[#12056] fix java11 List.of usage